--- a/ch/6-discussion.tex
+++ b/ch/6-discussion.tex
@@ -25,7 +25,7 @@ then the methods presented here can be used to try and correct the problem.
 One area of machine learning that has recently seen increased interest is unsupervised learning.
 The latter two chapters also make use of it to some degree.
 The exciting promise of unsupervised learning in general is
-that labor-intensive labeling is not needed and so vast amounts of existing, unlabelled data can be put to good use.
+that labour-intensive labelling is not needed and so vast amounts of existing, unlabelled data can be put to good use.
 One could ask the question whether bias-correcting methods are still needed, with access to so much data.
 It could be that, while the data is certainly not perfect,
 there is so much of it that the biased parts ``cancel each other out''.
