--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -9,8 +9,9 @@ leading to situations where neural networks do not do `what we meant', but just 
 This problem becomes especially severe when the training data is biased in some way,
 which, by default, makes the \ac{ML} system internalize the bias, or, in some cases, even exacerbate it.
 When applied in the deployment setting, the system will then not behave in the desired way.
-The topic of this thesis is how to deal with biased data;
-what types of biases exist and how to correct them if possible.
+The topic of this thesis is how to deal with biased data,
+where the bias is inextricably linked to a special attribute $s$.
+% and what types of biases exist and how to correct them if possible.
 
 \section{Motivation and aims}
 Many datasets with person-related features display biases when examined by common fairness criteria.
